﻿10.2.26.alpha.1 - 24th April 2024
- Added ability to toggle the main panel by clicking the slash command logo in the interface options panel.

10.2.24 - 24th April 2024
- Added a new setting called 'Keep audio synced' ('System').  If checked, when you change the audio output device in your operating system, the game audio output device will change automatically.|n|nFor this to work, the game audio output device will be set to system default.

10.2.23 - 10th April 2024
- For 'Remove transforms' ('System'), added a new setting 'Noblegarden: Noblegarden Bunny".  If checked, Noblegarden bunny transforms will be removed when applied.
- Leatrix addons for Cataclysm Classic will be available April 2024.

10.2.22 - 3rd April 2024
- For 'Mute mount sounds' ('System'), added 'Fish'.  If checked, fish mounts will be quieter.  This applies to Wondrous Wavewhisker.

10.2.21 - 27th March 2024
- Updated deprecated functions.
- For 'Enhance tooltip' ('Interface'), fixed a Lua error with the 'Akunda the Nimble' (Vol'dun) tooltip.

10.2.20 - 20th March 2024
- Updated for game patch 10.2.6.
- For 'Filter chat messages' ('Chat'), added a new setting 'Block Angelis and Sinny spam' (from the Bondable Val'kyr Diadem and Bondable Sinstone toys).

10.2.19 - 13th March 2024
- For 'Enhance minimap' ('Interface'), the 'Combine addon buttons' setting will now sort addon buttons alphabetically.

10.2.18 - 6th March 2024
- For 'Automate quests' ('Automation'), added automated quest turn-in for Khuri (Fishing Trainer) (the correct quest will be selected automatically if you have the fish in your bag but you still need to click Continue as the fish are classed as Crafting Reagents).

10.2.17 - 28th February 2024
- For 'Media', added music for Amirdrassil: The Dream's Hope, Dawn Of The Infinite and Vault of the Incarnates ('Dungeons').

10.2.16 - 21st February 2024
- Updated ScrollFrameTemplate for Media.